--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
+  "name": "website",
+  "version": "0.1.0",
+  "description": "The website for noahknegt.com build with next.js and tailwindcss",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 80",
     "build": "next build",
     "start": "next start"
   },
