--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The website for noahknegt.com build with next.js and tailwindcss",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 80",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
@@ -16,8 +16,11 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@types/node": "^16.11.4",
+    "@types/react": "^17.0.31",
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "tailwindcss": "^2.2.4",
+    "typescript": "^4.4.4"
   }
 }
