--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,8 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
-  ],
+    "**/*.tsx",
+    "pages/utils/useDarkMode.js"  ],
   "exclude": [
     "node_modules"
   ]
