--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@babel/core": "^7.15.8",
-    "next": "latest",
+    "next": "^12.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1"
